m4/check-checks.m4
@@ -27,6 +27,9 @@ dnl Check for strdup() and _strdup()
 AC_CHECK_DECLS([strdup])
 AC_CHECK_FUNCS([_strdup])
 
+dnl Check for mkstemp
+AC_CHECK_FUNCS([mkstemp])
+
 dnl Check for fork
 AC_CHECK_FUNCS([fork], HAVE_FORK=1, HAVE_FORK=0)
 AC_SUBST(HAVE_FORK)
